--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "brackets-indent-guides",
     "title": "Indent Guides",
-    "version": "1.0.0",
-    "description": "Show indent guides in the code editor.",
-    "homepage": "https://github.com/lkcampbell/brackets-indent-guides",
+    "version": "1.1.0",
+    "description": "Show indent guides with color gradient in the code editor.",
+    "homepage": "https://github.com/wmertens/brackets-indent-guides",
     "author": "Lance Campbell lkcampbell@gmail.com (https://github.com/lkcampbell)",
+    "contributors": [ "Wout Mertens <Wout.Mertens@gmail.com> (https://github.com/wmertens)" ], 
     "license": "MIT",
     "categories":"editing",
     "keywords": [
